# n8n-automatize-models

./: .dockerignore  .env.docker  .env.example  .gitignore  CLEANUP_SUMMARY.md  DEPLOYMENT_STATUS.md  DOCKER_GUIDE.md  Dockerfile  Dockerfile.dev  MEMORY_OPTIMIZATION_GUIDE.md  MODULAR_STRUCTURE_SUMMARY.md  NAFNET_REFACTOR_GUIDE.md  POETRY_GUIDE.md  PRETRAINED_MODELS_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  TRAINING_STATUS_REPORT.md  api_server_shared.py  cleanup_plan.md  demo_nafnet_structure.py  docker-compose.dev.yml  docker-compose.yml  docker-manager.ps1  docker-manager.sh  main_pipeline.py  pyproject.toml  quick_evaluation.py  requirements.txt  rq_job_system.py  setup_api_environment.py  setup_project.py  shared_job_queue.py  test_complete_finetuning.py  test_complete_local_system.py  test_corrections.py  test_dataset_debug.py  test_finetuning_local.py  test_finetuning_setup.py  test_jobs.py  test_modular_structure.py  (+5 more)
api/: .env.example  REFACTORING_SUMMARY.md  client.py  main.py  main_backup.py  main_modular.py  requirements.txt  synthetic_data_client.py
api/config/: __init__.py  constants.py  settings.py
api/models/: schemas.py
api/routers/: __init__.py  classification.py  files.py  jobs.py  jobs_rq.py  models.py  restoration.py  synthetic_data.py  training.py
api/services/: __init__.py  classification_service.py  file_management_service.py  image_analysis_service.py  (+7 more)
config/: pipeline_config.yaml  train_config.yaml
data_generation/: create_synthetic_data.py
docker/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.minio-setup  Dockerfile.worker  README.md  check_system.ps1  docker-compose-rq.yml  docker-compose.dev.yml  docker-compose.yml  minio-setup-complete.sh  minio-setup-python.py  minio-setup.sh  quick_start.ps1  start_dev.ps1  start_dev.sh  start_dev_simple.ps1  start_rq_system.ps1  start_rq_system.sh  start_simple.ps1  start_system.ps1  validate_docker_config.py
evaluation/: compare_models.py
layers/: requirements_training.txt
legacy/: analyze_data.py  analyze_results.py  create_synthetic_data.py  demo_complete.py  finetune_pretrained.py  finetune_pretrained_clean.py  gradual_transfer_learning.py  optimized_finetuning.py  project_summary.py  test_finetuned_model.py  test_gradual_model.py  test_gradual_quick.py  test_optimized_model.py  test_restoration.py  test_restormer_only.py  test_trained_model.py  train_simple.py  ultimate_comparison.py  use_pretrained_model.py
n8n/: MIGRATION_GUIDE.md  SYNTHETIC_DATA_WORKFLOW.md  TRAINING_PAIRS_FIX.md  n8n_layer2_helper.py  workflow_n8n_layer2.py
scripts/: README.md  __init__.py  manage_deps.py  setup_dev.py  start_api.py  validate_setup.py
src/: __init__.py  demo.py  pipeline.py  train.py  utils.py
training/: gradual_transfer_learning.py
workers/: README.md  health_check.py  rq_tasks.py  rq_worker.py  shared_job_worker_modular.py
(+57 files in other folders)
